fix: improved showcase layout alignment and reduced scroll jank with frameloop=demand

--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,7 @@ section {
     }
 
     .first-project-wrapper {
-      @apply h-full flex flex-col justify-between xl:w-[60%];
+      @apply flex flex-col justify-start gap-5 xl:w-[60%];
 
       .image-wrapper {
         @apply xl:h-[80vh] md:h-[50vh] h-96 relative;
